// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DastSiteProfileSummary renders properly profile 0 1`] = `
<div>
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      class=""
      label="Target URL"
      value="http://pending.test"
    />
     
    <profile-selector-summary-cell-stub
      label="Site type"
      value="Website"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Authentication URL"
      value="http://pending.test/sign-in"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username"
      value="validation-pending@example.com"
    />
     
    <profile-selector-summary-cell-stub
      label="Password"
      value="••••••••"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username form field"
      value="session[username]"
    />
     
    <profile-selector-summary-cell-stub
      label="Password form field"
      value="session[password]"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Excluded URLs"
      value="http://pending.test/sign-out,http://pending.test/hidden"
    />
     
    <profile-selector-summary-cell-stub
      label="Request headers"
      value="None"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Validation status"
      value="Not Validated"
    />
  </div>
</div>
`;

exports[`DastSiteProfileSummary renders properly profile 1 1`] = `
<div>
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      class=""
      label="Target URL"
      value="http://inprogress.test"
    />
     
    <profile-selector-summary-cell-stub
      label="Site type"
      value="Website"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Authentication URL"
      value="http://inprogress.test/sign-in"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username"
      value="validation-in-progress@example.com"
    />
     
    <profile-selector-summary-cell-stub
      label="Password"
      value="••••••••"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username form field"
      value="session[username]"
    />
     
    <profile-selector-summary-cell-stub
      label="Password form field"
      value="session[password]"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Excluded URLs"
      value="http://inprogress.test/sign-out,http://inprogress.test/hidden"
    />
     
    <profile-selector-summary-cell-stub
      label="Request headers"
      value="None"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Validation status"
      value="Not Validated"
    />
  </div>
</div>
`;

exports[`DastSiteProfileSummary renders properly profile 2 1`] = `
<div>
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      class=""
      label="Target URL"
      value="http://passed.test"
    />
     
    <profile-selector-summary-cell-stub
      label="Site type"
      value="Website"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Authentication URL"
      value="http://passed.test/sign-in"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username"
      value="validation-passed@example.com"
    />
     
    <profile-selector-summary-cell-stub
      label="Password"
      value="••••••••"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username form field"
      value="session[username]"
    />
     
    <profile-selector-summary-cell-stub
      label="Password form field"
      value="session[password]"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Excluded URLs"
      value="http://passed.test/sign-out,http://passed.test/hidden"
    />
     
    <profile-selector-summary-cell-stub
      label="Request headers"
      value="None"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Validation status"
      value="Validated"
    />
  </div>
</div>
`;

exports[`DastSiteProfileSummary renders properly profile 3 1`] = `
<div>
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      class=""
      label="Target URL"
      value="http://failed.test"
    />
     
    <profile-selector-summary-cell-stub
      label="Site type"
      value="Website"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Authentication URL"
      value="http://failed.test/sign-in"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username"
      value="validation-failed@example.com"
    />
     
    <profile-selector-summary-cell-stub
      label="Password"
      value="••••••••"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username form field"
      value="session[username]"
    />
     
    <profile-selector-summary-cell-stub
      label="Password form field"
      value="session[password]"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Excluded URLs"
      value="http://failed.test/sign-out,http://failed.test/hidden"
    />
     
    <profile-selector-summary-cell-stub
      label="Request headers"
      value="None"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Validation status"
      value="Not Validated"
    />
  </div>
</div>
`;

exports[`DastSiteProfileSummary renders properly profile 4 1`] = `
<div>
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      class=""
      label="Target URL"
      value="http://none.test"
    />
     
    <profile-selector-summary-cell-stub
      label="Site type"
      value="Website"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Authentication URL"
      value="http://none.test/sign-in"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username"
      value="non-validated@example.com"
    />
     
    <profile-selector-summary-cell-stub
      label="Password"
      value="••••••••"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username form field"
      value="session[username]"
    />
     
    <profile-selector-summary-cell-stub
      label="Password form field"
      value="session[password]"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Excluded URLs"
      value="http://none.test/sign-out,http://none.test/hidden"
    />
     
    <profile-selector-summary-cell-stub
      label="Request headers"
      value="None"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Validation status"
      value="Not Validated"
    />
  </div>
</div>
`;
